2013-02-26  Peter Bloomfield

	* src/balsa-app.c (append_url_if_open),
	(open_mailboxes_idle_cb): if we are not remembering open
	mailboxes, forget them.
	* src/main.c (scan_mailboxes_idle_cb): always call
	open_mailboxes_idle_cb so we can forget them.

2013-02-25  Peter Bloomfield

	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(sendmsg_window_new), (bsmsg2message), (sw_buffer_changed):
	remove annoying wrap timeout, and carry out autosave timeout
	without disturbing the compose window.
	* src/sendmsg-window.h: remove timeout id.

2013-02-25  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check): check that mailbox
	is still open.

2013-02-25  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_search_iter_ref): allow
	NULL iter.

2013-02-25  Peter Bloomfield

	* configure.in: actually error out if libsecret devel is not
	installed.

2013-02-24  Peter Bloomfield

	Port from GnomeKeyring to libsecret.

	* configure.in: implement --with-libsecret as an alternative to
	GnomeSecret.
	* libbalsa/imap-server.c (libbalsa_imap_server_new_from_config):
	use libsecret if configured.
	* libbalsa/server.c (libbalsa_server_load_config),
	(libbalsa_server_save_config): ditto.
	* libbalsa/server.h: ditto.
	* src/balsa-app.c (ask_password_real): new string to request
	saving in secret service.
	* src/folder-conf.c (folder_conf_imap_node): ditto.
	* src/mailbox-conf.c (create_imap_mailbox_dialog): ditto.

2013-02-23  Peter Bloomfield

	* update all copyrights to 2013.

2013-02-23  Peter Bloomfield

	* src/main.c (handle_remote): handle -h option.

2013-02-23  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_changed),
	(libbalsa_mailbox_msgno_changed): make sure parent message is
	checked.

2013-02-23  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check),
	(libbalsa_mailbox_msgno_filt_check): use an idle callback to
	check whether to filter a message in or out.

2013-02-21  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_finalize),