@@ -498,12 +498,14 @@ static void
 append_url_if_open(const gchar * url, LibBalsaMailboxView * view,
                    GPtrArray * array)
 {
-    if (balsa_app.remember_open_mboxes) {
-        if (view->open)
+    if (view->open) {
+        if (balsa_app.remember_open_mboxes) {
             g_ptr_array_add(array, g_strdup(url));
-    } else {
-        view->open = FALSE;
-        view->in_sync = 0;
+        } else {
+            /* Forget that it was open */
+            view->open = FALSE;
+            view->in_sync = 0;
+        }
     }
 }
 
