@@ -1,5 +1,10 @@
 2013-02-26  Peter Bloomfield
 
+	* src/balsa-app.c (append_url_if_open): mark view out-of-sync
+	only if it really is.
+
+2013-02-26  Peter Bloomfield
+
 	* src/balsa-app.c (append_url_if_open),
 	(open_mailboxes_idle_cb): if we are not remembering open
 	mailboxes, forget them.
